--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,4 +9,15 @@ trigger:
 pool:
   default
 
+steps:
+- task: Maven@3
 
+  inputs:
+    mavenPomFile: 'pom.xml'
+    mavenOptions: '-Xmx3072m'
+    javaHomeOption: 'JDKVersion'
+    jdkVersionOption: '15.0.2'
+    jdkArchitectureOption: 'x64'
+    publishJUnitResults: true
+    testResultsFiles: '**/surefire-reports/TEST-*.xml'
+    goals: 'package'
