--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,4 +18,4 @@ steps:
     jdkVersionOption: '16.0.1'
     jdkArchitectureOption: 'x64'
     publishJUnitResults: false
-    testResultsFiles: '**/TEST-*.xml
+    testResultsFiles: '**/TEST-*.xml'
